Fix some visible bugs

--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -4,15 +4,15 @@
 // }
 
 .main {
-  background-color: $dark-gray;
-  color: $white;
+  background-color: $button-background;
+  color: $button-color;
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
   padding: 10px 30px;
 
   &:not(.noHover):hover {
-    color: $white !important;
+    color: $button-color !important;
     background-color: $primary;
     text-decoration: none;
     @extend %hoverEffects;
@@ -30,14 +30,15 @@
 .outline {
   display: inline-block;
   padding: 5px 10px;
+  margin-left: 2px;
   border: 1px solid $button-outline;
   color: $button-outline;
   font-size: 13px;
   line-height: 22px;
 
   &:not(.noHover):hover {
-    background-color: $orange;
-    border: 1px solid $orange;
+    background-color: $primary;
+    border: 1px solid $primary;
     color: $button-text;
     cursor: pointer;
     @extend %hoverEffects;
@@ -45,8 +46,8 @@
 }
 
 .buttonLeft {
-  background-color: $dark-gray;
-  color: $white;
+  background-color: $button-background;
+  color: $button-color;
   font-size: 28px;
   line-height: 24px;
   padding: 8px 30px;
@@ -56,8 +57,8 @@
 }
 
 .buttonRight {
-  background-color: $dark-gray;
-  color: $white;
+  background-color: $button-background;
+  color: $button-color;
   font-size: 28px;
   line-height: 24px;
   padding: 8px 30px;
