--- a/src/components/common/FeatureBox/FeatureBox.module.scss
+++ b/src/components/common/FeatureBox/FeatureBox.module.scss
@@ -3,7 +3,6 @@
 .root {
   border: 1px solid $feature-box-border;
   text-align: center;
-  margin-top: 40px;
 
   .iconWrapper {
     height: 60px;
