--- a/src/components/common/Promoted/Promoted.module.scss
+++ b/src/components/common/Promoted/Promoted.module.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/settings.scss";
 
 .root2 {
-  padding: 2rem 0;
+  padding: 5rem 0;
 }
