--- a/src/components/common/Promoted/PromotedBox.module.scss
+++ b/src/components/common/Promoted/PromotedBox.module.scss
@@ -4,11 +4,10 @@
 .root {
   background-color: $white;
   border: 1px solid $white2;
-  margin-bottom: 2rem;
 
   .oldPrice {
     text-decoration: line-through;
-    color: $red;
+    color: $black4;
   }
 
   .price {
@@ -18,6 +17,15 @@
     line-height: 24px;
     font-weight: 600;
     padding: 5px 10px;
+    display: inline-block;
+  }
+
+  .empty {
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 600;
+    padding: 10px 15px;
+    display: inline-block;
   }
 
   &:hover {
@@ -52,7 +60,7 @@
         margin: 0;
         padding: 0 0 0 1rem;
         list-style: none;
-        transform: translateY(15px);
+        transform: translateY(10px);
 
         li {
           display: inline-block;
