--- a/src/components/common/Promoted/PromotedBox2.module.scss
+++ b/src/components/common/Promoted/PromotedBox2.module.scss
@@ -77,7 +77,6 @@
   }
 
   .actions {
-    position: relative;
     padding: 15px 10px 10px 10px;
     display: flex;
     justify-content: space-between;
